@@ -1,8 +1,12 @@
 {% extends "lizard_map/lizardgis.html" %}{% load i18n %}{% load map %}
 
 {% block map-javascript %}
+{% map_variables %}{# loads map variables #}
 <script type="text/javascript"
         src="{{ STATIC_URL }}lizard_map/lizard_wms.js"></script>
+{% ifequal base_layer_type "GOOGLE" %}
+<script src='http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAjpkAC9ePGem0lIq5XcMiuhR_wWLPFku8Ix9i2SXYRVK3e45q1BQUd_beF8dtzKET_EteAjPdGDwqpQ'></script>
+{% endifequal %}
 {% endblock map-javascript %}
 
 {% block above-content %}
@@ -54,7 +58,7 @@
 
 {% block content %}
 {# data attributes wms #}
-{% map_variables %}{# loads map variables that are used below #}
+{% map_variables %}{# loads map variables #}
 <div id="lizard-map-wms"
      data-javascript-click-handler="{{ javascript_click_handler }}"
      data-javascript-hover-handler="{{ javascript_hover_handler }}"
